--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -166,7 +166,20 @@
     "usdt_transaction_error": "Ошибка при отправке USDT транзакции",
     "transaction_send_error": "Ошибка при отправке транзакции",
     "wallet_not_connected": "Кошелек не подключен. Пожалуйста, подключите кошелек на главном экране.",
-    "insufficient_funds": "Недостаточно средств для вывода. Ваш баланс: {balance} WILL"
+    "insufficient_funds": "Недостаточно средств для вывода. Ваш баланс: {balance} WILL",
+    "warning": "Предупреждение",
+    "success": "Успех",
+    "info": "Информация",
+    "transaction_sent": "Транзакция отправлена",
+    "transaction_confirmed": "Транзакция подтверждена",
+    "transaction_failed": "Транзакция не удалась",
+    "withdrawal_request_sent": "Запрос на вывод отправлен",
+    "transaction_confirmed_message": "На ваш счет начислено {amount} WILL токенов",
+    "transaction_failed_message": "Не удалось обработать вашу транзакцию. Пожалуйста, попробуйте еще раз.",
+    "usdt_transaction_failed_message": "Не удалось обработать вашу USDT транзакцию. Пожалуйста, попробуйте еще раз.",
+    "habit_join_error": "Не удалось присоединиться к привычке. Пожалуйста, попробуйте позже.",
+    "habit_create_error": "Не удалось создать привычку. Пожалуйста, попробуйте позже.",
+    "ton_transaction_sent": "Ваша транзакция отправлена в блокчейн TON. Обработка может занять несколько минут."
   },
   "payment": {
     "buy": "Купить",
@@ -195,7 +208,15 @@
     "exchange_rate": "Курс обмена",
     "connected": "подключен",
     "transaction_failed": "Транзакция не удалась",
-    "transaction_failed_message": "Не удалось обработать вашу транзакцию. Пожалуйста, попробуйте еще раз."
+    "transaction_failed_message": "Не удалось обработать вашу транзакцию. Пожалуйста, попробуйте еще раз.",
+    "min_withdraw_amount": "Минимальная сумма для вывода: {amount} WILL",
+    "withdrawal_request_message": "Ваш запрос на вывод {will_amount} WILL ({usdt_amount} USDT) отправлен на обработку. Средства поступят на ваш кошелек в течение 24 часов.",
+    "withdrawal_error": "Ошибка при регистрации запроса на вывод",
+    "unknown_error": "Произошла неизвестная ошибка",
+    "invalid_usdt_master_address": "Недействительный адрес мастер-контракта USDT. Пожалуйста, проверьте конфигурацию.",
+    "invalid_app_wallet_address": "Недействительный адрес кошелька приложения. Пожалуйста, проверьте конфигурацию.",
+    "wallet_app_error": "Ошибка в приложении кошелька. Пожалуйста, попробуйте использовать другой кошелек или обновите приложение.",
+    "transaction_send_error": "Произошла ошибка при отправке транзакции"
   },
   "onboarding": {
     "welcome": {
