--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -216,7 +216,19 @@
     "invalid_usdt_master_address": "Недействительный адрес мастер-контракта USDT. Пожалуйста, проверьте конфигурацию.",
     "invalid_app_wallet_address": "Недействительный адрес кошелька приложения. Пожалуйста, проверьте конфигурацию.",
     "wallet_app_error": "Ошибка в приложении кошелька. Пожалуйста, попробуйте использовать другой кошелек или обновите приложение.",
-    "transaction_send_error": "Произошла ошибка при отправке транзакции"
+    "transaction_send_error": "Произошла ошибка при отправке транзакции",
+    "how_to_buy": "Как купить криптовалюту?",
+    "instructions_title": "Инструкции",
+    "instructions_message": "Хотите узнать, как купить криптовалюту?",
+    "start_guide": "Начать",
+    "ton_space_guide": "Шаг 1: Создание кошелька",
+    "ton_space_description": "Сначала нужно создать криптокошелек в TON Space. Это бесплатно и займет пару минут.",
+    "p2p_guide": "Шаг 2: Покупка TON",
+    "p2p_description": "Теперь можно купить криптовалюту TON на P2P маркете в боте Wallet.",
+    "usdt_guide": "Шаг 3: Пополнение USDT",
+    "usdt_description": "Последний шаг - обмен TON на USDT в вашем кошельке TON Space.",
+    "open_guide": "Открыть инструкцию",
+    "next_step": "Следующий шаг"
   },
   "onboarding": {
     "welcome": {
