Добавление валидации длины полей в модальном окне создания привычки, улучшение стилей карточки привычки с использованием градиентов и шрифта Manrope, а также обновление локализации для поддержки новых сообщений об ошибках.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -94,7 +94,8 @@
       "title_required": "Enter the habit name",
       "load_followers": "Failed to load followers",
       "unfollow": "Failed to unfollow user",
-      "ping": "Failed to send reminder"
+      "ping": "Failed to send reminder",
+      "max_length": "Maximum {max} characters"
     },
     "modals": {
       "delete_title": "Delete Habit",
