--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -94,7 +94,8 @@
       "title_required": "Введите название привычки",
       "load_followers": "Не удалось загрузить список подписчиков",
       "unfollow": "Не удалось отписаться от пользователя",
-      "ping": "Не удалось отправить напоминание"
+      "ping": "Не удалось отправить напоминание",
+      "max_length": "Максимальная длина: {max} символов"
     },
     "modals": {
       "delete_title": "Удаление привычки",
