Обновление логики обработки отмены привычки: замена операции обновления на удаление элемента из истории. Улучшение отображения подсказок в компоненте тепловой карты с учетом размеров окна. Обновление локализации для поддержки новых терминов.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -255,5 +255,8 @@
   },
   "creator": {
     "by": "Created by Leonid Romanychev"
+  },
+  "heatmap": {
+    "contributions": "completions"
   }
 } 
