--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -74,6 +74,14 @@
     "ping_all_sent_title": "Напоминания отправлены",
     "ping_all_sent_message": "Напоминания отправлены {count} подписчикам",
     "complete_before_ping": "Сначала выполните привычку, чтобы отправить напоминание",
+    "followers_management": "Управление подписчиками",
+    "i_follow": "Я подписан на",
+    "no_one_i_follow": "Вы ни на кого не подписаны",
+    "following_me": "На меня подписаны",
+    "no_one_following_me_yet": "На вас пока никто не подписан",
+    "subscribe_to_follower": "Подписаться на @{username}",
+    "follow_success": "Вы успешно подписались на @{username}",
+    "ping_all_inactive_mutual": "Напомнить всем (взаимным)",
     "join_habit": {
       "0": "Я выполняю привычку",
       "1": "уже",
@@ -95,6 +103,7 @@
       "load_followers": "Не удалось загрузить список подписчиков",
       "unfollow": "Не удалось отписаться от пользователя",
       "ping": "Не удалось отправить напоминание",
+      "follow": "Не удалось подписаться на пользователя",
       "max_length": "Максимальная длина: {max} символов"
     },
     "modals": {
