Добавление функционала удаления архивированных привычек: реализация подтверждения удаления, обновление интерфейса с добавлением кнопки удаления и модального окна для подтверждения действия. Передача идентификатора пользователя для корректной обработки запросов к API.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -3,8 +3,8 @@
     "title": "Name",
     "title_placeholder": "Example: Meditation",
     "create": "Create Habit",
-    "edit": "Edit Habit",
-    "delete": "Delete Habit",
+    "edit": "Edit",
+    "delete": "Delete",
     "name": "Habit Name",
     "habits_list": "Habits",
     "want_to_become": "Who I Want to Become",
