--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -3,8 +3,8 @@
     "title": "Название",
     "title_placeholder": "Например: Медитация",
     "create": "Создать привычку",
-    "edit": "Редактировать привычку",
-    "delete": "Удалить привычку",
+    "edit": "Редактировать",
+    "delete": "Удалить",
     "name": "Название привычки",
     "habits_list": "Привычки",
     "want_to_become": "Кем хочу стать",
