Добавление функционала для создания и совместного использования историй привычек: реализация генерации изображений историй с использованием градиентов, загрузка изображений на Imgbb и добавление новых кнопок для совместного использования в чате и сторис. Обновление интерфейса с новыми текстами для локализации.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -46,6 +46,8 @@
     },
     "add": "Add habit",
     "share": "Share",
+    "share_in_chat": "Share in chat",
+    "share_in_story": "Share to story",
     "archive": "Archive",
     "compact_view": "Compact view",
     "every_day": "Do every day",
@@ -126,6 +128,10 @@
     },
     "ping_blocked_title": "Reminder Blocked"
   },
+    "habits_story": {
+      "story_invite": "Join my habit on Habitry",
+      "days_in_row": "days in a row"
+    },
   "days": {
     "monday": "Mon",
     "tuesday": "Tue",
