--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -46,6 +46,8 @@
     },
     "add": "Добавить привычку",
     "share": "Поделиться",
+    "share_in_chat": "Поделиться в чате",
+    "share_in_story": "Поделиться в сторис",
     "archive": "Архивировать",
     "compact_view": "Компактный вид",
     "every_day": "Выполнять каждый день",
@@ -126,6 +128,10 @@
     },
     "ping_blocked_title": "Напоминание заблокировано"
   },
+    "habits_story": {
+      "story_invite": "Присоединяйся к моей привычке в Habitry",
+      "days_in_row": "дней подряд"
+    },
   "days": {
     "monday": "Пн",
     "tuesday": "Вт",
