--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -107,6 +107,7 @@
       "unfollow": "Не удалось отписаться от пользователя",
       "ping": "Не удалось отправить напоминание",
       "follow": "Не удалось подписаться на пользователя",
+      "follow_self": "Нельзя подписаться на собственную привычку",
       "max_length": "Максимальная длина: {max} символов"
     },
     "modals": {
