--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -274,20 +274,41 @@
   "onboarding": {
     "welcome": {
       "title": "Добро пожаловать в Habitry!",
-      "description": "Мы поможем вам создавать и поддерживать полезные привычки вместе с друзьями"
+      "description": "Мы поможем вам создавать и поддерживать полезные привычки вместе с друзьями",
+      "quote": "Мы — то, что постоянно делаем. Совершенство — не действие, а привычка.",
+      "quote_author": "— Аристотель"
     },
     "social": {
       "title": "Взаимная поддержка",
-      "description": "Поделитесь своей привычкой с друзьями по ссылке. Когда друг свяжет вашу привычку со своей, он будет видеть ваш прогресс. Чтобы видеть его прогресс, вам тоже нужно связать его привычку со своей"
+      "description": "Попробуй отметить привычку! Нажми и удерживай карточку.",
+      "hold_to_complete": "Нажми и удерживай",
+      "great_job": "Отлично!",
+      "success_message": "Ты справился!"
     },
     "interaction": {
-      "title": "Как отметить привычку",
-      "description": "Чтобы отметить привычку выполненной, нажмите и удерживайте её карточку"
+      "title": "Сила стрика",
+      "description": "Создавай стрик! Нажимай на дни, чтобы увидеть силу последовательности.",
+      "streak_achieved": "7 дней — отличный старт!"
+    },
+    "community": {
+      "title": "Сила сообщества",
+      "description": "Делись своими привычками с друзьями. Вместе легче достигать целей!",
+      "shared_habits": "Общие привычки",
+      "leaderboard": "Таблица лидеров",
+      "friend_support": "Поддержка друзей"
+    },
+    "stats": {
+      "title": "Сила вместе",
+      "description": "Люди, которые выполняют привычки с друзьями, достигают своих целей гораздо чаще!",
+      "with_friends": "С друзьями",
+      "alone": "В одиночку",
+      "success_rate": "успешности"
     },
     "start": {
       "title": "Начнем!",
       "description": "Создайте свою первую привычку и пригласите друзей присоединиться к вам",
-      "action": "Создать привычку"
+      "action": "Создать привычку",
+      "motivation": "Ты готов начать свой путь к лучшей версии себя!"
     },
     "skip": "Пропустить",
     "next": "Далее"
