Добавление функции перезапуска онбординга: обновлен компонент SettingsPage для включения кнопки "Перезапустить онбординг", добавлены соответствующие локализации на английском и русском языках, а также обновлена логика в App.svelte для обработки события запуска онбординга.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -186,7 +186,10 @@
     "community": "Community",
     "telegram_channel": "Telegram Channel",
     "community_chat": "Community Chat",
-    "join": "Join"
+    "join": "Join",
+    "restart_onboarding": "Restart onboarding",
+    "start": "Start",
+    "other": "Other"
   },
   "profile": {
     "title": "User Profile",
