Enhance OnboardingModal with navigation and progress tracking: added back button functionality, integrated a new ProgressBar component, and improved body scroll management during onboarding. Updated localization for new button labels in English and Russian.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -314,7 +314,8 @@
       "motivation": "You're ready to start your journey to a better version of yourself!"
     },
     "skip": "Skip",
-    "next": "Next"
+    "next": "Next",
+    "back": "Back"
   },
   "creator": {
     "by": "Created by Leonid Romanychev"
