--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -305,7 +305,7 @@
       "description": "Люди, которые выполняют привычки с друзьями, достигают своих целей гораздо чаще!",
       "with_friends": "С друзьями",
       "alone": "В одиночку",
-      "success_rate": "успешности"
+      "success_rate": "Коэффициент успеха"
     },
     "start": {
       "title": "Начнем!",
@@ -314,7 +314,8 @@
       "motivation": "Ты готов начать свой путь к лучшей версии себя!"
     },
     "skip": "Пропустить",
-    "next": "Далее"
+    "next": "Далее",
+    "back": "Назад"
   },
   "creator": {
     "by": "Создал Леонид Романычев"
