--- a/frontend/src/i18n/locales/ru.json
+++ b/frontend/src/i18n/locales/ru.json
@@ -129,10 +129,10 @@
     },
     "ping_blocked_title": "Напоминание заблокировано"
   },
-    "habits_story": {
-      "story_invite": "Присоединяйся к моей привычке в Habitry",
-      "days_in_row": "дней подряд"
-    },
+  "habits_story": {
+    "story_invite": "Присоединяйся к моей привычке в Habitry",
+    "days_in_row": "дней подряд"
+  },
   "days": {
     "monday": "Пн",
     "tuesday": "Вт",
@@ -307,6 +307,11 @@
       "alone": "В одиночку",
       "success_rate": "Коэффициент успеха"
     },
+    "homescreen": {
+      "title": "Добавить на главный экран",
+      "description": "Получите быстрый доступ к Habitry, добавив его на главный экран.",
+      "button": "Добавить на главный экран"
+    },
     "start": {
       "title": "Начнем!",
       "description": "Создайте свою первую привычку и пригласите друзей присоединиться к вам",
@@ -323,4 +328,4 @@
   "heatmap": {
     "contributions": "выполнений"
   }
-} 
+}
